--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -W -Ofast -flto")
+set(CMAKE_CXX_FLAGS  "-Wall -Wextra -Wshadow -W -Ofast -flto -g")
 
 project(out)
 
